Fix bad use of RunLoop::main().dispatch() in MessagePort::dispatchMessages() https://bugs.webkit.org/show_bug.cgi?id=185134

Reviewed by Geoffrey Garen.

Fix bad use of RunLoop::main().dispatch() in MessagePort::dispatchMessages(). This code runs on iOS WebKitLegacy
and it is therefore unsafe to use RunLoop::main() here. We want to use callOnMainThread() instead to run code on
the WebThread.

* dom/MessagePort.cpp:
(WebCore::MessagePort::dispatchMessages):


Canonical link: https://commits.webkit.org/200623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231161 268f45cc-cd09-0410-ab3c-d52691b4dbfc